--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,12 @@
-BeautifulSoup==3.2.1
-cffi==1.1.0
 click==6.6
-configobj==5.0.6
-cryptography==1.0
-decorator==3.4.2
-enum34==1.0
-gmixer==1.0
-httplib2==0.9.1
-idna==2.0
-iotop==0.6
-ipaddr==2.1.10
-ipaddress==1.0.14
-kml2geojson==3.0.4
-libvirt-python==2.0.0
-lxml==3.2.3
-numpy==1.8.0
-pathlib==1.0.1
-py==1.4.30
-pyasn1==0.1.8
-pycparser==2.10
-pycups==1.9.72
-pycurl==7.19.0
-pygobject==3.16.2
-pyOpenSSL==0.14
-python-xlib==0.12
-pyudev==0.16.1
-requests==2.7.0
-rethinkdb==2.3.0.post4
-six==1.9.0
-urlgrabber==3.9.1
-virtualenv==15.0.2
+Flask==0.11.1
+Flask-Assets==0.11
+Flask-Cors==2.1.2
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+requests==2.11.1
+rethinkdb==2.3.0.post5
+six==1.10.0
+webassets==0.11.1
+Werkzeug==0.11.10
